fix issue with background image on iOS

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -20,6 +20,16 @@ body {
     margin: 0px;
 }
 
+#mobile-background {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: -1000;
+    @media(min-device-width: 750px) {
+        display: none !important;
+    }
+}
+
 h1 {
     font-family: 'Domine', serif;
 }
